remove main overflow fix header position left and space between

--- a/src/layout/Header/Header.css
+++ b/src/layout/Header/Header.css
@@ -1,34 +1,36 @@
 .headerTop {
-  /* Navbar */
-
-  box-sizing: border-box;
-
-  /* Auto layout */
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 16px 24px 16px 12px;
-  gap: 24px;
-
   position: absolute;
   width: calc(100vw - 88px);
+
   height: 76.93px;
   left: 88px;
   top: 0px;
 
   border-bottom: 1px solid #d3d4d5;
 
-  .brand {
-    /* Brand */
+  .navbar {
+    /* Navbar */
+
+    box-sizing: border-box;
 
     /* Auto layout */
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 16px 24px 16px 12px;
+    gap: 24px;
+  }
+
+  .brand {
+    /* Brand */
+
+    /* Auto layout */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 0px;
     gap: 10px;
 
-    width: 988px;
     height: 44.93px;
 
     /* Inside auto layout */
